# sarafun_online_motion_generation

lwr_description/urdf/: common.xacro  kuka_lwr_arm.gazebo  kuka_lwr_arm.xacro  util_defs.xml
sarafun_hqp_omg/: CMakeLists.txt  rviz_kuka.rviz
sarafun_hqp_omg/include/: hqp_wrapper.h  obsav_controller.h  obstacle.h
sarafun_hqp_omg/launch/: hqp.launch
